<?xml version="1.0" encoding="utf-8"?>

<!--
  dLeyna

  Copyright (C) 2013 Intel Corporation. All rights reserved.

  This program is free software; you can redistribute it and/or modify it
  under the terms and conditions of the GNU Lesser General Public License,
  version 2.1, as published by the Free Software Foundation.

  This program is distributed in the hope it will be useful, but WITHOUT
  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
  for more details.

  You should have received a copy of the GNU Lesser General Public License
  along with this program; if not, write to the Free Software Foundation, Inc.,
  51 Franklin St - Fifth Floor, Boston, MA 02110-1301 USA.

  Tom Keel <thomas.keel@intel.com>
-->

<resources>
    <string name="app_name">DLeyna Demo</string>
    <string name="app_push_name">DLeyna Push</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="connect">Conn</string>
    <string name="disconnect">Disc</string>
    <string name="list_renderers">List</string>
    <string name="none">No Tests</string>
    <string name="pref_activity_name">DLeyna Demo\nSettings</string>
    <string name="rescan">Scan</string>
    <string name="scanning">Looking for Renderers...</string>
    <string name="settings">Settings</string>
</resources>
